@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-20T08:12:32Z",
-  "count_outdated" : 1353,
-  "uniques_outdated" : 730,
-  "count" : 1374,
+  "timestamp" : "2023-09-21T00:42:10Z",
+  "count_outdated" : 1355,
+  "uniques_outdated" : 731,
+  "count" : 1375,
   "uniques" : 744,
   "clones" : [
-    {
-      "timestamp": "2023-09-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-07T00:00:00Z",
       "count": 1,
@@ -106,9 +97,9 @@
     },
     {
       "timestamp": "2023-09-20T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count": 4,
+      "count_minmax": [ 3, 4 ],
+      "count_decinc": [ 0, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
