@@ -1,3 +1,12 @@
+2023-09-21T00:42:10Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6255688173 # 1919
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-21
+* notice: last 14d: unq all: 6 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 730 1353 / 744 1374
+* notice: next accum: outdated-unq outdated-all / unq all: 731 1355 / 744 1375
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [2023-09-06] / [2023-09-20]
+
 2023-09-20T08:12:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6245815280 # 1917
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-20
